--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@angular/platform-browser-dynamic": "^18.0.0",
     "@angular/platform-server": "^18.0.0",
     "@angular/router": "^18.0.0",
+    "@grpc/grpc-js": "^1.11.0",
     "@prisma/client": "^5.16.2",
     "front-matter": "^4.0.2",
     "marked": "^5.0.2",
@@ -46,6 +47,7 @@
     "@angular/compiler-cli": "^18.0.0",
     "jsdom": "^22.0.0",
     "prisma": "^5.16.2",
+    "ts-proto": "^1.181.1",
     "typescript": "~5.4.2",
     "vite": "~5.2.0",
     "vite-tsconfig-paths": "^4.2.0",
