Got the grpc service defined and working

--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "start": "npm run dev",
     "build": "ng build",
     "watch": "ng build --watch --configuration development",
-    "test": "ng test"
+    "test": "ng test",
+    "build:proto": "proto-loader-gen-types --longs=String --enums=String --defaults --oneofs --grpcLib=@grpc/grpc-js --outDir=src/server/grpc/generated src/server/grpc/proto/*.proto"
   },
   "private": true,
   "dependencies": {
