--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   "dependencies": {
     "@analogjs/content": "^1.6.1",
     "@analogjs/router": "^1.6.1",
+    "@analogjs/trpc": "^0.2.45",
     "@angular/animations": "^18.0.0",
     "@angular/common": "^18.0.0",
     "@angular/compiler": "^18.0.0",
@@ -29,6 +30,8 @@
     "@angular/router": "^18.0.0",
     "@grpc/grpc-js": "^1.11.0",
     "@prisma/client": "^5.16.2",
+    "@trpc/client": "^10.45.2",
+    "@trpc/server": "^10.45.2",
     "front-matter": "^4.0.2",
     "marked": "^5.0.2",
     "marked-gfm-heading-id": "^3.1.0",
@@ -37,6 +40,7 @@
     "prismjs": "^1.29.0",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
+    "zod": "^3.23.8",
     "zone.js": "~0.14.3"
   },
   "devDependencies": {
