--- a/package.json
+++ b/package.json
@@ -20,10 +20,12 @@
     "@analogjs/router": "^1.6.1",
     "@analogjs/trpc": "^0.2.45",
     "@angular/animations": "^18.0.0",
+    "@angular/cdk": "^18.1.1",
     "@angular/common": "^18.0.0",
     "@angular/compiler": "^18.0.0",
     "@angular/core": "^18.0.0",
     "@angular/forms": "^18.0.0",
+    "@angular/material": "^18.1.1",
     "@angular/platform-browser": "^18.0.0",
     "@angular/platform-browser-dynamic": "^18.0.0",
     "@angular/platform-server": "^18.0.0",
