--- a/tsconfig.json
+++ b/tsconfig.json
@@ -21,7 +21,7 @@
     "lib": ["ES2022", "dom"],
     "useDefineForClassFields": false,
     "skipLibCheck": true,
-    "allowSyntheticDefaultImports": true
+    "allowSyntheticDefaultImports": true,
   },
   "angularCompilerOptions": {
     "enableI18nLegacyMessageIdFormat": false,
@@ -29,5 +29,4 @@
     "strictInputAccessModifiers": true,
     "strictTemplates": true
   },
-  "extends": "./dist/.nitro/types/tsconfig.json"
 }
